コード品質向上: 未使用変数・インポートの削除とアクセシビリティ改善
修正内容:
1. StatsView.tsx
   - 未使用のScoreRadarChartインポートを削除
   - 未使用のgetDifficultyStatsForRadarインポートを削除
   - 未使用のtranslationRadar, spellingRadar変数を削除

2. SpellingView.tsx
   - 未使用のhandleReset関数を削除
   - コードの簡潔化

3. index.html
   - viewportからmaximum-scale=1.0を削除
   - viewportからuser-scalable=noを削除
   - アクセシビリティ向上（ユーザーがピンチズーム可能に）

4. .gitignore
   - CHANGES_PLAN.js/tsを追加（作業用メモファイル）

これにより、TypeScriptの警告が解消され、
Webアクセシビリティも改善されました。

--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,7 @@ proofread_*.py
 list_passages.py
 regenerate_*.py
 corrections_*.json
+
+# Planning and temporary files
+CHANGES_PLAN.js
+CHANGES_PLAN.ts
