--- a/.env.production
+++ b/.env.production
@@ -1,4 +1,4 @@
 # Sentry設定（本番環境のみ）
 # DSNは https://sentry.io でプロジェクト作成後に取得
 # 例: VITE_SENTRY_DSN=https://xxxxx@o123456.ingest.sentry.io/7890123
-VITE_SENTRY_DSN=
+VITE_SENTRY_DSN=https://***REMOVED***@***REMOVED***.ingest.us.sentry.io/***REMOVED***
