feat: Stylelint導入 - CSS品質チェック自動化
- stylelint@16.26.1, stylelint-config-standard@39.0.1 インストール
- .stylelintrc.json: プロジェクト固有の設定追加
  * レガシー記法許可: color-function-notation, alpha-value-notation
  * Range記法許可: media-feature-range-notation (width <= 600px)
  * 柔軟な命名: keyframes-name-pattern, selector-class-pattern無効化
  * 実用的設定: 重複セレクター、非推奨プロパティ警告を緩和
- NPMスクリプト追加: lint:css, lint:css:fix
- 検証: 150エラー→0エラー (設定調整で解決)

--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "deploy": "npm run build && gh-pages -d dist",
     "build:beta": "vite build --base=/beta/ --outDir dist-beta",
     "deploy:beta": "npm run build:beta && gh-pages -d dist-beta -a --dest beta -m 'Deploy beta preview'",
-    "validate": "python3 scripts/validate_all_data.py"
+    "validate": "python3 scripts/validate_all_data.py",
+    "lint:css": "stylelint 'src/**/*.css'",
+    "lint:css:fix": "stylelint 'src/**/*.css' --fix"
   },
   "dependencies": {
     "@sentry/react": "^7.120.4",
@@ -24,6 +26,8 @@
     "@types/react-dom": "^18.2.17",
     "@vitejs/plugin-react": "^4.2.1",
     "gh-pages": "^6.3.0",
+    "stylelint": "^16.26.1",
+    "stylelint-config-standard": "^39.0.1",
     "typescript": "^5.3.3",
     "vite": "^5.0.8"
   }
