chore: Stylelint VSCode統合設定
- VSCodeの組み込みCSS検証を無効化
- Stylelint拡張を有効化
- 保存時に自動修正 (source.fixAll.stylelint)
- 対象: CSS, SCSS, Less

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,13 @@
     {
       "file": "docs/PASSAGE_CREATION_GUIDELINES.md"
     }
-  ]
+  ],
+  "css.validate": false,
+  "less.validate": false,
+  "scss.validate": false,
+  "stylelint.enable": true,
+  "stylelint.validate": ["css", "scss", "less"],
+  "editor.codeActionsOnSave": {
+    "source.fixAll.stylelint": "explicit"
+  }
 }
