fix: ReadingView.tsx構文エラー修正
- handleReset関数の括弧の閉じ方を修正
- 余分な ); を削除
- ビルドチェックワークフローのコメント更新

修正内容:
- setPassages内のmap関数の閉じ括弧を正しく配置
- TypeScript型チェックはビルド時に実行される

結果: ビルド成功 ✓

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,6 +28,6 @@ jobs:
       - name: 依存関係インストール
         run: npm ci
       
-      # 4. ビルドが成功するか確認
+      # 4. ビルドが成功するか確認（型チェック含む）
       - name: ビルド確認
         run: npm run build
