--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
     "deploy:beta": "npm run build:beta && gh-pages -d dist-beta -a --dest beta -m 'Deploy beta preview'",
     "validate": "python3 scripts/validate_all_data.py",
     "lint:css": "stylelint 'src/**/*.css'",
-    "lint:css:fix": "stylelint 'src/**/*.css' --fix"
+    "lint:css:fix": "stylelint 'src/**/*.css' --fix",
+    "typecheck": "tsc --noEmit",
+    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "test:ci": "npm run typecheck && npm run build"
   },
   "dependencies": {
     "@sentry/react": "^7.120.4",
@@ -24,7 +27,12 @@
     "@fullhuman/postcss-purgecss": "^7.0.2",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
+    "@typescript-eslint/eslint-plugin": "^8.48.0",
+    "@typescript-eslint/parser": "^8.48.0",
     "@vitejs/plugin-react": "^4.2.1",
+    "eslint": "^9.39.1",
+    "eslint-plugin-react-hooks": "^7.0.1",
+    "eslint-plugin-react-refresh": "^0.4.24",
     "gh-pages": "^6.3.0",
     "stylelint": "^16.26.1",
     "stylelint-config-standard": "^39.0.1",
