feat: 破壊的変更防止システム構築
Pre-commit/Pre-push フック + 視覚回帰テスト導入

--- a/.gitignore
+++ b/.gitignore
@@ -34,6 +34,11 @@ test-*.html
 test-*.js
 *_TEST_REPORT.md
 
+# Playwright test results
+test-results/
+playwright-report/
+playwright/.cache/
+
 # Temporary CSS files
 *Context.css
 Attached*.css
