--- a/package.json
+++ b/package.json
@@ -14,7 +14,12 @@
     "lint:css:fix": "stylelint 'src/**/*.css' --fix",
     "typecheck": "tsc --noEmit",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "test:ci": "npm run typecheck && npm run build"
+    "test:ci": "npm run typecheck && npm run build",
+    "test:smoke": "playwright test --project=chromium",
+    "test:smoke:ui": "playwright test --project=chromium --ui",
+    "test:smoke:debug": "playwright test --project=chromium --debug",
+    "test:smoke:update": "playwright test --project=chromium --update-snapshots",
+    "prepare": "husky"
   },
   "dependencies": {
     "@sentry/react": "^7.120.4",
@@ -24,7 +29,10 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@eslint/js": "^9.39.1",
     "@fullhuman/postcss-purgecss": "^7.0.2",
+    "@playwright/test": "^1.57.0",
+    "@types/node": "^24.10.1",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
     "@typescript-eslint/eslint-plugin": "^8.48.0",
@@ -34,9 +42,13 @@
     "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-react-refresh": "^0.4.24",
     "gh-pages": "^6.3.0",
+    "globals": "^16.5.0",
+    "husky": "^9.1.7",
+    "lint-staged": "^16.2.7",
     "stylelint": "^16.26.1",
     "stylelint-config-standard": "^39.0.1",
     "typescript": "^5.3.3",
+    "typescript-eslint": "^8.48.0",
     "vite": "^5.0.8"
   }
 }
