--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "typecheck": "tsc --noEmit",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "test:ci": "npm run typecheck && npm run build",
-    "test:smoke": "playwright test --project=chromium",
+    "test:smoke": "playwright test tests/smoke-fast.spec.ts --project=chromium",
+    "test:smoke:full": "playwright test tests/smoke.spec.ts --project=chromium",
+    "test:smart": "bash scripts/smart-test.sh",
     "test:smoke:ui": "playwright test --project=chromium --ui",
     "test:smoke:debug": "playwright test --project=chromium --debug",
     "test:smoke:update": "playwright test --project=chromium --update-snapshots",
