--- a/package.json
+++ b/package.json
@@ -34,12 +34,14 @@
     "@eslint/js": "^9.39.1",
     "@fullhuman/postcss-purgecss": "^7.0.2",
     "@playwright/test": "^1.57.0",
+    "@tailwindcss/forms": "^0.5.10",
     "@types/node": "^24.10.1",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
     "@typescript-eslint/eslint-plugin": "^8.48.0",
     "@typescript-eslint/parser": "^8.48.0",
     "@vitejs/plugin-react": "^4.2.1",
+    "autoprefixer": "^10.4.22",
     "eslint": "^9.39.1",
     "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-react-refresh": "^0.4.24",
@@ -47,8 +49,10 @@
     "globals": "^16.5.0",
     "husky": "^9.1.7",
     "lint-staged": "^16.2.7",
+    "postcss": "^8.5.6",
     "stylelint": "^16.26.1",
     "stylelint-config-standard": "^39.0.1",
+    "tailwindcss": "^3.4.17",
     "typescript": "^5.3.3",
     "typescript-eslint": "^8.48.0",
     "vite": "^5.0.8"
