fix: scrollbar-widthブラウザ互換性警告を抑制
- index-tailwind.css: scrollbar-widthにコメント追加（Firefox用、Safari等では無視される）
- .vscode/settings.json: CSS互換性チェックを無効化
  - css.lint.compatibleVendorPrefixes: ignore
  - css.lint.vendorPrefix: ignore
  - css.lint.unknownProperties: ignore

Note: scrollbar-widthは段階的な機能強化として使用。
サポートされていないブラウザでは-webkit-scrollbarが代替として機能。

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,5 +11,8 @@
   "stylelint.validate": ["css", "scss", "less"],
   "editor.codeActionsOnSave": {
     "source.fixAll.stylelint": "explicit"
-  }
+  },
+  "css.lint.compatibleVendorPrefixes": "ignore",
+  "css.lint.vendorPrefix": "ignore",
+  "css.lint.unknownProperties": "ignore"
 }
