fix: Tailwind CSS @tailwindと@applyの警告を抑制
- .vscode/settings.json: css.lint.unknownAtRules を ignore に設定
- VS CodeのCSS検証がTailwindのディレクティブを認識しないための警告を抑制
- PostCSSでビルド時に正しく処理されるため機能には影響なし

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,5 +14,6 @@
   },
   "css.lint.compatibleVendorPrefixes": "ignore",
   "css.lint.vendorPrefix": "ignore",
-  "css.lint.unknownProperties": "ignore"
+  "css.lint.unknownProperties": "ignore",
+  "css.lint.unknownAtRules": "ignore"
 }
