chore: 旧GitHub Actions設定をアーカイブに保管
- tools/archive-github/: 外側の.github/フォルダをアーカイブ
- workflows/quality-check.yml: 旧品質保証パイプライン
- README.md: アーカイブの説明と復元方法
- .gitignore: archive-githubのみ追跡

--- a/.gitignore
+++ b/.gitignore
@@ -89,4 +89,8 @@ prototype/
 vocabulary_lists/
 
 # Archive and tools
-tools/
+tools/archive-scripts/
+tools/archive-reports/
+tools/deploy.log
+# Keep archive-github for documentation
+!tools/archive-github/
