--- a/public/data/passages-phrase-learning/beginner-weather-seasons.json
+++ b/public/data/passages-phrase-learning/beginner-weather-seasons.json
@@ -507,7 +507,7 @@
         },
         {
           "word": "according",
-          "meaning": "(要確認)",
+          "meaning": "農薬こと・している",
           "isUnknown": false,
           "lemma": "according",
           "reading": "according",
@@ -1460,7 +1460,7 @@
         },
         {
           "word": "parks",
-          "meaning": "(要確認)",
+          "meaning": "公園・駐車する（複数形）",
           "isUnknown": false,
           "lemma": "parks",
           "reading": "parks",
@@ -2222,7 +2222,7 @@
         },
         {
           "word": "appears",
-          "meaning": "(要確認)",
+          "meaning": "現れる（複数形）",
           "isUnknown": false,
           "lemma": "appears",
           "reading": "appears",
@@ -2263,7 +2263,7 @@
         },
         {
           "word": "shines",
-          "meaning": "(要確認)",
+          "meaning": "輝く（複数形）",
           "isUnknown": false,
           "lemma": "shines",
           "reading": "shines",
@@ -2304,7 +2304,7 @@
         },
         {
           "word": "drops",
-          "meaning": "(要確認)",
+          "meaning": "気温（複数形）",
           "isUnknown": false,
           "lemma": "drops",
           "reading": "drops",
@@ -2378,7 +2378,7 @@
         },
         {
           "word": "mornings",
-          "meaning": "(要確認)",
+          "meaning": "朝（複数形）",
           "isUnknown": false,
           "lemma": "mornings",
           "reading": "mornings",
@@ -3492,7 +3492,7 @@
         },
         {
           "word": "shines",
-          "meaning": "(要確認)",
+          "meaning": "輝く（複数形）",
           "isUnknown": false,
           "lemma": "shines",
           "reading": "shines",
@@ -4544,7 +4544,7 @@
         },
         {
           "word": "storms",
-          "meaning": "(要確認)",
+          "meaning": "嵐",
           "isUnknown": false,
           "lemma": "storms",
           "reading": "storms",
@@ -4673,7 +4673,7 @@
         },
         {
           "word": "storms",
-          "meaning": "(要確認)",
+          "meaning": "嵐",
           "isUnknown": false,
           "lemma": "storms",
           "reading": "storms",
@@ -4747,7 +4747,7 @@
         },
         {
           "word": "noises",
-          "meaning": "(要確認)",
+          "meaning": "騒音・雑音（複数形）",
           "isUnknown": false,
           "lemma": "noises",
           "reading": "noises",
@@ -5257,7 +5257,7 @@
         },
         {
           "word": "indoors",
-          "meaning": "(要確認)",
+          "meaning": "屋内の・室内の（複数形）",
           "isUnknown": false,
           "lemma": "indoors",
           "reading": "indoors",
@@ -5298,7 +5298,7 @@
         },
         {
           "word": "storms",
-          "meaning": "(要確認)",
+          "meaning": "嵐",
           "isUnknown": false,
           "lemma": "storms",
           "reading": "storms",
@@ -7704,7 +7704,7 @@
         },
         {
           "word": "drops",
-          "meaning": "(要確認)",
+          "meaning": "気温（複数形）",
           "isUnknown": false,
           "lemma": "drops",
           "reading": "drops",
@@ -7906,7 +7906,7 @@
         },
         {
           "word": "replaced",
-          "meaning": "(要確認)",
+          "meaning": "取り替えるた・された",
           "isUnknown": false,
           "lemma": "replaced",
           "reading": "replaced",
@@ -8967,7 +8967,7 @@
         },
         {
           "word": "skies",
-          "meaning": "(要確認)",
+          "meaning": "空（複数形）",
           "isUnknown": false,
           "lemma": "skies",
           "reading": "skies",
@@ -9579,7 +9579,7 @@
         },
         {
           "word": "touches",
-          "meaning": "(要確認)",
+          "meaning": "触れる・接触（複数形）",
           "isUnknown": false,
           "lemma": "touches",
           "reading": "touches",
@@ -9782,7 +9782,7 @@
         },
         {
           "word": "warms",
-          "meaning": "(要確認)",
+          "meaning": "暖かい（複数形）",
           "isUnknown": false,
           "lemma": "warms",
           "reading": "warms",
@@ -9867,7 +9867,7 @@
         },
         {
           "word": "disappears",
-          "meaning": "(要確認)",
+          "meaning": "消える（複数形）",
           "isUnknown": false,
           "lemma": "disappears",
           "reading": "disappears",
@@ -10410,7 +10410,7 @@
         },
         {
           "word": "progresses",
-          "meaning": "(要確認)",
+          "meaning": "進歩（複数形）",
           "isUnknown": false,
           "lemma": "progresses",
           "reading": "progresses",
@@ -11283,7 +11283,7 @@
         },
         {
           "word": "covers",
-          "meaning": "(要確認)",
+          "meaning": "覆う・表紙（複数形）",
           "isUnknown": false,
           "lemma": "covers",
           "reading": "covers",
@@ -12896,7 +12896,7 @@
         },
         {
           "word": "appears",
-          "meaning": "(要確認)",
+          "meaning": "現れる（複数形）",
           "isUnknown": false,
           "lemma": "appears",
           "reading": "appears",
@@ -12918,7 +12918,7 @@
         },
         {
           "word": "windows",
-          "meaning": "(要確認)",
+          "meaning": "窓",
           "isUnknown": false,
           "lemma": "windows",
           "reading": "windows",
@@ -12984,7 +12984,7 @@
         },
         {
           "word": "mornings",
-          "meaning": "(要確認)",
+          "meaning": "朝（複数形）",
           "isUnknown": false,
           "lemma": "mornings",
           "reading": "mornings",
@@ -13291,7 +13291,7 @@
         },
         {
           "word": "windows",
-          "meaning": "(要確認)",
+          "meaning": "窓",
           "isUnknown": false,
           "lemma": "windows",
           "reading": "windows",
@@ -13888,7 +13888,7 @@
         },
         {
           "word": "indoors",
-          "meaning": "(要確認)",
+          "meaning": "屋内の・室内の（複数形）",
           "isUnknown": false,
           "lemma": "indoors",
           "reading": "indoors",
@@ -15123,7 +15123,7 @@
         },
         {
           "word": "touches",
-          "meaning": "(要確認)",
+          "meaning": "触れる・接触（複数形）",
           "isUnknown": false,
           "lemma": "touches",
           "reading": "touches",
@@ -15297,7 +15297,7 @@
         },
         {
           "word": "covered",
-          "meaning": "(要確認)",
+          "meaning": "覆う・表紙た・された",
           "isUnknown": false,
           "lemma": "covered",
           "reading": "covered",
@@ -17394,7 +17394,7 @@
         },
         {
           "word": "covers",
-          "meaning": "(要確認)",
+          "meaning": "覆う・表紙（複数形）",
           "isUnknown": false,
           "lemma": "covers",
           "reading": "covers",
@@ -17964,7 +17964,7 @@
         },
         {
           "word": "forecasts",
-          "meaning": "(要確認)",
+          "meaning": "予報・予測する（複数形）",
           "isUnknown": false,
           "lemma": "forecasts",
           "reading": "forecasts",
@@ -18511,7 +18511,7 @@
         },
         {
           "word": "forecasts",
-          "meaning": "(要確認)",
+          "meaning": "予報・予測する（複数形）",
           "isUnknown": false,
           "lemma": "forecasts",
           "reading": "forecasts",
@@ -18596,7 +18596,7 @@
         },
         {
           "word": "satellites",
-          "meaning": "(要確認)",
+          "meaning": "衛星",
           "isUnknown": false,
           "lemma": "satellites",
           "reading": "satellites",
@@ -18648,7 +18648,7 @@
       "segments": [
         {
           "word": "Satellites",
-          "meaning": "(要確認)",
+          "meaning": "衛星",
           "isUnknown": false,
           "lemma": "Satellites",
           "reading": "Satellites",
@@ -18920,7 +18920,7 @@
         },
         {
           "word": "storms",
-          "meaning": "(要確認)",
+          "meaning": "嵐",
           "isUnknown": false,
           "lemma": "storms",
           "reading": "storms",
@@ -21209,7 +21209,7 @@
         },
         {
           "word": "forecasts",
-          "meaning": "(要確認)",
+          "meaning": "予報・予測する（複数形）",
           "isUnknown": false,
           "lemma": "forecasts",
           "reading": "forecasts",
@@ -21272,7 +21272,7 @@
         },
         {
           "word": "instruments",
-          "meaning": "(要確認)",
+          "meaning": "楽器・器具",
           "isUnknown": false,
           "lemma": "instruments",
           "reading": "instruments",
@@ -21499,7 +21499,7 @@
       "segments": [
         {
           "word": "Satellites",
-          "meaning": "(要確認)",
+          "meaning": "衛星",
           "isUnknown": false,
           "lemma": "Satellites",
           "reading": "Satellites",
@@ -22226,7 +22226,7 @@
         },
         {
           "word": "tools",
-          "meaning": "(要確認)",
+          "meaning": "道具",
           "isUnknown": false,
           "lemma": "tools",
           "reading": "tools",
@@ -22470,7 +22470,7 @@
         },
         {
           "word": "instruments",
-          "meaning": "(要確認)",
+          "meaning": "楽器・器具",
           "isUnknown": false,
           "lemma": "instruments",
           "reading": "instruments",
@@ -22725,7 +22725,7 @@
         },
         {
           "word": "predictions",
-          "meaning": "(要確認)",
+          "meaning": "予測",
           "isUnknown": false,
           "lemma": "predictions",
           "reading": "predictions",
@@ -22766,7 +22766,7 @@
         },
         {
           "word": "forecasts",
-          "meaning": "(要確認)",
+          "meaning": "予報・予測する（複数形）",
           "isUnknown": false,
           "lemma": "forecasts",
           "reading": "forecasts",
@@ -22917,7 +22917,7 @@
         },
         {
           "word": "forecasts",
-          "meaning": "(要確認)",
+          "meaning": "予報・予測する（複数形）",
           "isUnknown": false,
           "lemma": "forecasts",
           "reading": "forecasts",
@@ -23226,7 +23226,7 @@
         },
         {
           "word": "forecasts",
-          "meaning": "(要確認)",
+          "meaning": "予報・予測する（複数形）",
           "isUnknown": false,
           "lemma": "forecasts",
           "reading": "forecasts",
@@ -23333,7 +23333,7 @@
         },
         {
           "word": "forecasts",
-          "meaning": "(要確認)",
+          "meaning": "予報・予測する（複数形）",
           "isUnknown": false,
           "lemma": "forecasts",
           "reading": "forecasts",
@@ -23421,7 +23421,7 @@
         },
         {
           "word": "skies",
-          "meaning": "(要確認)",
+          "meaning": "空（複数形）",
           "isUnknown": false,
           "lemma": "skies",
           "reading": "skies",
@@ -23525,7 +23525,7 @@
         },
         {
           "word": "drops",
-          "meaning": "(要確認)",
+          "meaning": "気温（複数形）",
           "isUnknown": false,
           "lemma": "drops",
           "reading": "drops",
@@ -23588,7 +23588,7 @@
         },
         {
           "word": "predictions",
-          "meaning": "(要確認)",
+          "meaning": "予測",
           "isUnknown": false,
           "lemma": "predictions",
           "reading": "predictions",
@@ -23684,7 +23684,7 @@
         },
         {
           "word": "forecasts",
-          "meaning": "(要確認)",
+          "meaning": "予報・予測する（複数形）",
           "isUnknown": false,
           "lemma": "forecasts",
           "reading": "forecasts",
@@ -24541,7 +24541,7 @@
         },
         {
           "word": "centuries",
-          "meaning": "(要確認)",
+          "meaning": "世紀、100年（複数形）",
           "isUnknown": false,
           "lemma": "centuries",
           "reading": "centuries",
@@ -24663,7 +24663,7 @@
         },
         {
           "word": "releasing",
-          "meaning": "(要確認)",
+          "meaning": "解放する・発売こと・している",
           "isUnknown": false,
           "lemma": "releasing",
           "reading": "releasing",
@@ -24796,7 +24796,7 @@
         },
         {
           "word": "appears",
-          "meaning": "(要確認)",
+          "meaning": "現れる（複数形）",
           "isUnknown": false,
           "lemma": "appears",
           "reading": "appears",
@@ -25237,7 +25237,7 @@
         },
         {
           "word": "increased",
-          "meaning": "(要確認)",
+          "meaning": "増加する・増加た・された",
           "isUnknown": false,
           "lemma": "increased",
           "reading": "increased",
@@ -25289,7 +25289,7 @@
         },
         {
           "word": "waves",
-          "meaning": "(要確認)",
+          "meaning": "波",
           "isUnknown": false,
           "lemma": "waves",
           "reading": "waves",
@@ -26098,7 +26098,7 @@
         },
         {
           "word": "waves",
-          "meaning": "(要確認)",
+          "meaning": "波",
           "isUnknown": false,
           "lemma": "waves",
           "reading": "waves",
@@ -27190,7 +27190,7 @@
         },
         {
           "word": "environmentally",
-          "meaning": "(要確認)",
+          "meaning": "環境のに",
           "isUnknown": false,
           "lemma": "environmentally",
           "reading": "environmentally",
