Stage 6-7: 高頻度語と固有名詞を処理
Stage 6 (高頻度単語5回以上):
- 29語 (150箇所) を手動辞書で修正
- wondered, warned, dinosaur, cricket, kids など

Stage 7 (固有名詞と大文字始まり):
- 46語 (58箇所) を処理
- 辞書に新規追加: 34固有名詞 + 12文頭単語
- Luther, Anderson, Louvre, BTS, WeChat など

累計:
- 修正: 1,420語 (3,896箇所)
- 完成率: 74.5%
- 残り: 2,262語 (目標95%まで1,817語)

--- a/public/data/passages-phrase-learning/beginner-weather-seasons.json
+++ b/public/data/passages-phrase-learning/beginner-weather-seasons.json
@@ -5183,7 +5183,7 @@
         },
         {
           "word": "electrical",
-          "meaning": "(要確認)",
+          "meaning": "電気の",
           "isUnknown": false,
           "lemma": "electrical",
           "reading": "electrical",
@@ -13058,7 +13058,7 @@
         },
         {
           "word": "layer",
-          "meaning": "(要確認)",
+          "meaning": "層",
           "isUnknown": false,
           "lemma": "layer",
           "reading": "layer",
@@ -15057,7 +15057,7 @@
         },
         {
           "word": "layer",
-          "meaning": "(要確認)",
+          "meaning": "層",
           "isUnknown": false,
           "lemma": "layer",
           "reading": "layer",
@@ -17638,7 +17638,7 @@
         },
         {
           "word": "predict",
-          "meaning": "(要確認)",
+          "meaning": "予測する",
           "isUnknown": false,
           "lemma": "predict",
           "reading": "predict",
@@ -20917,7 +20917,7 @@
       "segments": [
         {
           "word": "Hiking",
-          "meaning": "(要確認)",
+          "meaning": "ハイキング",
           "isUnknown": false,
           "lemma": "Hiking",
           "reading": "Hiking",
@@ -21831,7 +21831,7 @@
         },
         {
           "word": "predict",
-          "meaning": "(要確認)",
+          "meaning": "予測する",
           "isUnknown": false,
           "lemma": "predict",
           "reading": "predict",
@@ -22130,7 +22130,7 @@
         },
         {
           "word": "atmospheric",
-          "meaning": "(要確認)",
+          "meaning": "大気の・雰囲気の",
           "isUnknown": false,
           "lemma": "atmospheric",
           "reading": "atmospheric",
@@ -22662,7 +22662,7 @@
         },
         {
           "word": "amounts",
-          "meaning": "(要確認)",
+          "meaning": "量・金額",
           "isUnknown": false,
           "lemma": "amounts",
           "reading": "amounts",
@@ -24393,7 +24393,7 @@
         },
         {
           "word": "atmospheric",
-          "meaning": "(要確認)",
+          "meaning": "大気の・雰囲気の",
           "isUnknown": false,
           "lemma": "atmospheric",
           "reading": "atmospheric",
@@ -25873,7 +25873,7 @@
         },
         {
           "word": "shift",
-          "meaning": "(要確認)",
+          "meaning": "変化・シフト",
           "isUnknown": false,
           "lemma": "shift",
           "reading": "shift",
