Stage 8: 中頻度単語(3-4回)を処理
- 146語 (513箇所) を手動辞書で修正
- 動詞形、名詞形、形容詞形、副詞形など幅広くカバー
- 完成率: 74.5% → 78.3% (+3.8%)

累計:
- 修正: 1,566語 (4,409箇所)
- 完成率: 78.3% (目標95%の82.5%達成)
- 残り: 1,926語 (2,523箇所)
- 目標まで: あと1,481語

--- a/public/data/passages-phrase-learning/beginner-weather-seasons.json
+++ b/public/data/passages-phrase-learning/beginner-weather-seasons.json
@@ -942,7 +942,7 @@
         },
         {
           "word": "melt",
-          "meaning": "(要確認)",
+          "meaning": "溶ける",
           "isUnknown": false,
           "lemma": "melt",
           "reading": "melt",
@@ -1375,7 +1375,7 @@
         },
         {
           "word": "branches",
-          "meaning": "(要確認)",
+          "meaning": "枝・支店",
           "isUnknown": false,
           "lemma": "branches",
           "reading": "branches",
@@ -1556,7 +1556,7 @@
         },
         {
           "word": "gray",
-          "meaning": "(要確認)",
+          "meaning": "灰色",
           "isUnknown": false,
           "lemma": "gray",
           "reading": "gray",
@@ -1682,7 +1682,7 @@
         },
         {
           "word": "unpredictable",
-          "meaning": "(要確認)",
+          "meaning": "予測できない",
           "isUnknown": false,
           "lemma": "unpredictable",
           "reading": "unpredictable",
@@ -4300,7 +4300,7 @@
       "segments": [
         {
           "word": "hiking",
-          "meaning": "(要確認)",
+          "meaning": "ハイキング・ハイキングする",
           "isUnknown": false,
           "lemma": "hiking",
           "reading": "hiking",
@@ -4799,7 +4799,7 @@
         },
         {
           "word": "frightening",
-          "meaning": "(要確認)",
+          "meaning": "恐ろしい・怖がらせる",
           "isUnknown": false,
           "lemma": "frightening",
           "reading": "frightening",
@@ -8723,7 +8723,7 @@
         },
         {
           "word": "hidden",
-          "meaning": "(要確認)",
+          "meaning": "隠れた",
           "isUnknown": false,
           "lemma": "hidden",
           "reading": "hidden",
@@ -8830,7 +8830,7 @@
         },
         {
           "word": "pleasant",
-          "meaning": "(要確認)",
+          "meaning": "快適な",
           "isUnknown": false,
           "lemma": "pleasant",
           "reading": "pleasant",
@@ -12523,7 +12523,7 @@
         },
         {
           "word": "branches",
-          "meaning": "(要確認)",
+          "meaning": "枝・支店",
           "isUnknown": false,
           "lemma": "branches",
           "reading": "branches",
@@ -14665,7 +14665,7 @@
         },
         {
           "word": "gray",
-          "meaning": "(要確認)",
+          "meaning": "灰色",
           "isUnknown": false,
           "lemma": "gray",
           "reading": "gray",
@@ -15426,7 +15426,7 @@
         },
         {
           "word": "branches",
-          "meaning": "(要確認)",
+          "meaning": "枝・支店",
           "isUnknown": false,
           "lemma": "branches",
           "reading": "branches",
@@ -16567,7 +16567,7 @@
         },
         {
           "word": "frightening",
-          "meaning": "(要確認)",
+          "meaning": "恐ろしい・怖がらせる",
           "isUnknown": false,
           "lemma": "frightening",
           "reading": "frightening",
@@ -17276,7 +17276,7 @@
         },
         {
           "word": "melt",
-          "meaning": "(要確認)",
+          "meaning": "溶ける",
           "isUnknown": false,
           "lemma": "melt",
           "reading": "melt",
@@ -20939,7 +20939,7 @@
         },
         {
           "word": "pleasant",
-          "meaning": "(要確認)",
+          "meaning": "快適な",
           "isUnknown": false,
           "lemma": "pleasant",
           "reading": "pleasant",
@@ -21510,7 +21510,7 @@
         },
         {
           "word": "orbiting",
-          "meaning": "(要確認)",
+          "meaning": "軌道を回る",
           "isUnknown": false,
           "lemma": "orbiting",
           "reading": "orbiting",
@@ -21993,7 +21993,7 @@
         },
         {
           "word": "unpredictable",
-          "meaning": "(要確認)",
+          "meaning": "予測できない",
           "isUnknown": false,
           "lemma": "unpredictable",
           "reading": "unpredictable",
@@ -25928,7 +25928,7 @@
         },
         {
           "word": "predictable",
-          "meaning": "(要確認)",
+          "meaning": "予測可能な",
           "isUnknown": false,
           "lemma": "predictable",
           "reading": "predictable",
