Stage 9: 低頻度単語(3回)を処理
- 95語 (285箇所) を手動辞書で修正
- accessibility, biologist, culinary, drought など多様な語彙
- 完成率: 78.4% → 79.4% (+1.0%)

累計:
- 修正: 1,661語 (4,694箇所)
- 完成率: 79.4% (目標95%の83.6%達成)
- 残り: 1,831語 (2,238箇所)
- 目標まで: あと1,386語

次: 2回出現(382語)と1回出現から選定して目標達成

--- a/public/data/passages-phrase-learning/beginner-weather-seasons.json
+++ b/public/data/passages-phrase-learning/beginner-weather-seasons.json
@@ -5642,7 +5642,7 @@
         },
         {
           "word": "drought",
-          "meaning": "(要確認)",
+          "meaning": "干ばつ",
           "isUnknown": false,
           "lemma": "drought",
           "reading": "drought",
@@ -5694,7 +5694,7 @@
         },
         {
           "word": "drought",
-          "meaning": "(要確認)",
+          "meaning": "干ばつ",
           "isUnknown": false,
           "lemma": "drought",
           "reading": "drought",
@@ -9431,7 +9431,7 @@
         },
         {
           "word": "fog",
-          "meaning": "(要確認)",
+          "meaning": "霧",
           "isUnknown": false,
           "lemma": "fog",
           "reading": "fog",
@@ -9845,7 +9845,7 @@
         },
         {
           "word": "fog",
-          "meaning": "(要確認)",
+          "meaning": "霧",
           "isUnknown": false,
           "lemma": "fog",
           "reading": "fog",
@@ -10495,7 +10495,7 @@
         },
         {
           "word": "shorter",
-          "meaning": "(要確認)",
+          "meaning": "より短い",
           "isUnknown": false,
           "lemma": "shorter",
           "reading": "shorter",
@@ -20389,7 +20389,7 @@
         },
         {
           "word": "drought",
-          "meaning": "(要確認)",
+          "meaning": "干ばつ",
           "isUnknown": false,
           "lemma": "drought",
           "reading": "drought",
@@ -21897,7 +21897,7 @@
         },
         {
           "word": "reasonable",
-          "meaning": "(要確認)",
+          "meaning": "合理的な",
           "isUnknown": false,
           "lemma": "reasonable",
           "reading": "reasonable",
@@ -22311,7 +22311,7 @@
         },
         {
           "word": "precipitation",
-          "meaning": "(要確認)",
+          "meaning": "降水",
           "isUnknown": false,
           "lemma": "precipitation",
           "reading": "precipitation",
@@ -23547,7 +23547,7 @@
         },
         {
           "word": "precipitation",
-          "meaning": "(要確認)",
+          "meaning": "降水",
           "isUnknown": false,
           "lemma": "precipitation",
           "reading": "precipitation",
